# overedge

./: .gitignore  Cargo.toml  Makefile  Trunk.toml  go.mod  go.sum  index.html  main.go  posts.go
js/: disqus.js  markdown.js
posts/: 0-About.md  1-one-must-imagine-sisyphus-happy.md  2-leading-introvert.md  20210225004100-one-must-imagine-sisyphus-happy.md  20210225004200-leading-introvert.md  3-made-with-wyrm.md  example.md  leading-introvert.md  posts.json
scss/: index.scss
scss/components/: gradient-bg.scss  navbar.scss
scss/pages/: post.scss
src/: js.rs  lib.rs  main.rs  router.rs
src/components/: navbar.rs
src/pages/: error.rs  home.rs  mod.rs
src/pages/post/: detail.rs  mod.rs
static/: index.html
