[package]
authors = ["Ganesha Danu <ganeshadanu1@gmail.com>"]
edition = "2018"
name = "overedge"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.6"
wasm-bindgen = "0.2.67"
wasm-logger = "0.2.0"
yew = "0.17"
yew-router = "0.14"
